[package]
name = "spotify-liked-transfer"
version = "0.1.0"
authors = ["rumblefrog <contact@rumblefrog.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.30"
futures-util = "0.3.30"
rspotify = { version = "0.12.0", features=["cli"] }
tokio = { version = "1.11.1", features = ["full"] }

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
